--- a/frontend/app/styles/general/_voters.sass
+++ b/frontend/app/styles/general/_voters.sass
@@ -2,14 +2,22 @@
   width: 60%
   margin: 0 auto
   float: none
-  h4
+  
+#voter-edit
+	h4
 	  padding-bottom: 3px
 	  border-bottom: 1px solid $lightgray
 	  margin-top: 0px
-		label
-			color: $darkgray
-			font-weight: 300
-			margin-bottom: 2px
+		
+#voter-edit
+	label
+		color: $darkgray
+		font-weight: 300
+		margin-bottom: 2px
+	
+#voter-edit
+	textarea
+		min-height: 150px
 
 .voter-edit-title
 	margin-top: 0px
@@ -43,5 +51,11 @@
 .form-signin input[type="number"]
 	margin-bottom: 7px
 
-.panel-body
-	padding: 15px 0
+.form-signin input[type="email"]
+	margin-bottom: 7px
+
+.form-signin input[type="checkbox"]
+	margin-bottom: 7px
+
+.x-select
+	margin-bottom: 7px
