Updated color palette

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -3,7 +3,7 @@
 
 .selectize-dropdown
 	text-transform: uppercase !important
-	border: 1px solid $aqua !important
+	border: 1px solid $primary !important
 
 .selectize-input
 	border: 0 !important
@@ -17,7 +17,7 @@
 		border-radius: 4px !important
 		cursor: pointer !important
 		margin: 0 !important
-		background: $aqua !important
+		background: $primary !important
 		color: $white !important
 		padding: 6px 8px !important
 		box-shadow: none !important
@@ -34,7 +34,7 @@
 		border-radius: 4px !important
 		cursor: pointer !important
 		margin: 0 6px 6px 0 !important
-		background: $aqua !important
+		background: $primary !important
 		border: 1px solid transparent !important
 		color: $white !important
 		padding: 4px 16px 4px 4px !important
