--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -86,7 +86,7 @@
     border: none !important
     -webkit-box-shadow: none !important
     box-shadow: none !important
-    background: $aqua !important
+    background: $primary !important
 
 .searchbar-container
   height: 100%
