--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -13,7 +13,7 @@ $alertlightred: #f04124
 // Primary Palette
 $white: #fbfbfb
 $black: #2c2d30
-$aqua: #55cec5
+$primary: #6698c8
 
 // Blue
 $lightblue: #6fa6cc
