--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -3,7 +3,7 @@
   // Links
 
 a
-  color: $aqua
+  color: $primary
   &:hover
     @extend a
     color: $lightcloud
@@ -189,8 +189,8 @@ a
 // BUTTONS 
 
 .btn-success
-  background: $aqua
-  border: 2px solid $aqua
+  background: $primary
+  border: 2px solid $primary
   border-radius: 4px
   color: $white
   margin: 5px 0
@@ -406,7 +406,7 @@ a
     background: $cloud
 
 .sidebar-selected
-  background: $aqua
+  background: $primary
   border-radius: 4px
   color: $white
 
