Updated selectize dropdown style at _parties-selection.sass

--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -13,7 +13,7 @@ $alertlightred: #f04124
 // Primary Palette
 $white: #fbfbfb
 $black: #2c2d30
-$primary: #6698c8
+$primary: #33b18c
 
 // Blue
 $lightblue: #6fa6cc
