--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -3,7 +3,12 @@
 
 .selectize-dropdown
 	text-transform: uppercase !important
-	border: 1px solid $primary !important
+	border: 1px solid $lightgray !important
+	border-radius: 0 !important
+	box-shadow: none !important
+
+.selectize-dropdown-content
+	max-height: 100px !important
 
 .selectize-input
 	border: 0 !important
@@ -67,7 +72,7 @@
 	font-size: 10px !important
 	padding: 4px 0 0 0 !important
 
-// Sowwy, beats me
+// Sowwy
 
 #select-party
 	input
@@ -79,5 +84,10 @@
 
 #select-party .selectize-input
 	input
-		background-color: $white !important
-		border-radius: 4px !important
+		background-color: #ffffff !important
+
+#select-party .selectize-input input
+	border: 1px solid $lightgray !important
+	border-radius: 0 !important
+	margin-bottom: 1px !important
+	z-index: 1000 !important
