Removes second name from voter

--- a/frontend/app/templates/components/voter-row.hbs
+++ b/frontend/app/templates/components/voter-row.hbs
@@ -2,7 +2,7 @@
 
 	<td>{{voter.electoral_id_number}}</td>
 
-	<td>{{voter.first_name}} {{voter.second_name}}</td>
+	<td>{{voter.first_name}}</td>
 	<td>{{voter.first_last_name}}</td>
 	<td>{{voter.second_last_name}}</td>
 	<td>{{readable-date voter.date_of_birth}}</td>
