--- a/frontend/app/templates/ine/voters.hbs
+++ b/frontend/app/templates/ine/voters.hbs
@@ -79,7 +79,7 @@
 						<td>{{voter.electoral_id_number}}</td>
 						<td>{{voter.expiration_date}}</td>
 
-						<td>{{voter.first_name}} {{voter.second_name}}</td>
+						<td>{{voter.first_name}}</td>
 						<td>{{voter.first_last_name}}</td>
 						<td>{{voter.second_last_name}}</td>
 						<td>{{voter.gender}}</td>
