Changed primary color

--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -13,7 +13,7 @@ $alertlightred: #f04124
 // Primary Palette
 $white: #fbfbfb
 $black: #2c2d30
-$primary: #33b18c
+$primary: #2d9ee0
 
 // Blue
 $lightblue: #6fa6cc
