Profile circle style in top navigation

--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -113,8 +113,8 @@ ul.top-menu > li > .logout
   margin-right: 5px
   margin-top: 10px
   border-radius: 50%
-  background-color: #6fa6cc
-  color: #f2f2f2
+  background-color: $white
+  color: $primary
   font-size: 16px
   text-align: center
   line-height: 41px
