--- a/frontend/app/styles/general/_login.sass
+++ b/frontend/app/styles/general/_login.sass
@@ -35,6 +35,9 @@
       border-top-right-radius: 0
     &[type="checkbox"]
       box-shadow: none
+      width: 120px
+  select.form-control
+      padding: 0 10px
   .form-control
     position: relative
     font-size: 16px
@@ -77,3 +80,5 @@ textarea.form-control
 .reached-infinity
   display: none
   
+h4 .text-muted
+  font-size: 0.8em
