--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -38,10 +38,6 @@
                                     {{input value=voter.first_name required=true pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Segundo Nombre - <i class="text-muted">Opcional</i></label>
-                                    {{input value=voter.second_name pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
-                                </div>
-                                <div class="col-md-8 col-md-offset-2">
                                     <label>Apellido Paterno</label>
                                     {{input value=voter.first_last_name required=true pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
                                 </div>
@@ -69,12 +65,11 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Género</label>
-                                    {{#x-select class="form-control voter-edit-select" value=voter.gender required=true on-change=(action "updateGender" voter) as |gnd|}} 
-                                        {{#gnd.option value='' disabled=true selected=true hidden=true}}Seleccionar{{/gnd.option}}
-                                        {{#gnd.option value="H"}}Hombre{{/gnd.option}}
-                                        {{#gnd.option value="M"}}Mujer{{/gnd.option}} 
-                                    {{/x-select}}
+                                    <label style="display: block">Género</label>
+                                    <div class="btn-group">
+                                        <button id='H-btn' type="button" class="btn btn-default {{if voter.}}" {{action 'updateGender' voter 'H'}}>Hombre</button>
+                                        <button id='M-btn' type="button" class="btn btn-default" {{action 'updateGender' voter 'M'}}>Mujer</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -235,7 +230,7 @@
                         <div class="form-group row">
                             <div class="form-group row">
                                 <div class="col-md-8 col-md-offset-2">
-                                    <h4 style="margin-top:-7px">Notas</h4>
+                                    <h4 style="margin-top:-7px">Notas - <i class="text-muted">Opcional</i></h4>
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     {{textarea value=voter.notes rows=5 class="form-control voter-edit-field"}}
