--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -25,8 +25,8 @@ $darkerblue: #192029
 // Gray
 $lightergray: #f9f9f9
 $lightgray: #e8e8e8
+$gray: #d4d7dc
 $mediumgray: #777
-$gray: #d5d5d6
 $darkgray: #4c4d50
 
 // Red
