--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -1,12 +1,3 @@
-a
-  color: $primary
-
-// Columns
-.col-centered
-  float: none
-  margin-right: auto
-  margin-left: auto
-
 // Map
 .card
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)
@@ -92,23 +83,21 @@ a
 
 // Tooltips
 #tooltip-map
-  color: black
   position: absolute
-  padding: 2px 8px
-  z-index: 99999
-  font-size: 12px
-  border: solid 1px #ccc
+  z-index: 999
   background: white
-  box-shadow: 0 0 8px rgba(0,0,0,.2)
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26) !important
   display: none
   pointer-events: none
   width: 250px
   margin-top: -70px
+  padding: 10px
 
 .tooltip-header
-  text-align: left
+  margin-bottom: 25px
+  text-transform: capitalize
+  text-align: center
   font-weight: 600
-  font-size: 15px
 
 .tooltip-row
   margin: 4px 0
@@ -137,6 +126,10 @@ a
   color: black
   font-weight: 600
 
+.tooltip-total
+  text-align: center !important
+  font-weight: 600
+
 // Voter table
 .voter-table
   tr
@@ -154,9 +147,7 @@ a
   text-align: center
   font-size: 35px
 
-.voter-table-content
-
-// Switcher Bar
+// Switcher bar
 .switcher-bar-first
   width: 65%
   height: 15px
@@ -219,7 +210,6 @@ a
   position: absolute
   top: 100px
   left: 265px
-  font-size: 11px
   color: #666
   z-index: 5
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26)
@@ -237,6 +227,7 @@ a
 .key-row-label
   width: 30%
   float: right
+  color: $black
 
 .key-right-label
   font-weight: bold
@@ -244,12 +235,14 @@ a
   padding: 5px
   width: 65px
   margin-right: 35px
+  color: $black
 
 .key-left-label
   font-weight: bold
   padding: 5px
   width: 10px
   float: left
+  color: $black
 
 .colors-row
   width: 65%
@@ -274,20 +267,17 @@ a
 
 // Sidebar
 .sidebar-text-title
-  color: $darkblue
-  font-family: 'Open Sans'
-  font-size: 14px
+  color: $black
   font-weight: 600
   text-align: left
   margin-bottom: 5px !important
   text-transform: none
 
 .sidebar-text
-  font-size: 10px !important
   padding: 8px
   float: left
   cursor: pointer
-  text-transform: uppercase
+  text-transform: none
   border-radius: 4px
 
 .sidebar-text-left
@@ -309,8 +299,7 @@ a
 .sidebar-projections
   margin-bottom: 20px
 
-// TIMELINE
-
+// Timeline
 .sidebar-timeline
   padding-left: 25px
 
