--- a/frontend/app/templates/components/tooltip-comparison.hbs
+++ b/frontend/app/templates/components/tooltip-comparison.hbs
@@ -1,8 +1,6 @@
 <div class="tooltip-row">
-	<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}} <span class="small-text">{{totalVotes}} Total de votos</span></h6>
+	<h6 class="tooltip-header">Sección: {{hoveredSection.section_code}}</h6>
 </div>
-
-
 <div class="tooltip-row pct-bar-labels">
 	<p style="margin-right: 30px;">{{firstParty.name}} {{firstParty.percentage}}%</p>
 	<p>{{secondParty.name}} {{secondParty.percentage}}%</p>
@@ -11,30 +9,28 @@
 <div class="tooltip-row">
 <div class="pct-bar" style={{percentageBar}}></div>
 </div>
-
 <div class="tooltip-row">
 	<table class="table votes-table">
 		<thead class="votes-table-header">
 			<tr>
-				<th>PARTIDO</th>
-				<th>VOTOS</th>
-				<th>PCT. %</th>
+				<th>Partido</th>
+				<th>Votos</th>
+				<th>%</th>
 			</tr>
 		</thead>
 		<tbody class="votes-table-content">
 			<tr>
 				<td>
 					<span class="tooltip-color-box" style="{{background-color firstParty.color}}"></span>
-					<span class="tooltip-party">{{firstParty.name}}</span>
+					<span class="tooltip-party">{{firstParty.name}}:</span>
 				</td>
 				<td>{{firstParty.votes}}</td>
 				<td class="tooltip-pct">{{firstParty.percentage}} %</td>
 			</tr>
-
 			<tr>
 				<td>
 					<span class="tooltip-color-box" style="{{background-color secondParty.color}}"></span>
-					<span class="tooltip-party">{{secondParty.name}}</span>
+					<span class="tooltip-party">{{secondParty.name}}:</span>
 				</td>
 				<td>{{secondParty.votes}}</td>
 				<td class="tooltip-pct">{{secondParty.percentage}} %</td>
@@ -42,3 +38,4 @@
 		</tbody>
 	</table>
 </div>
+<div class="tooltip-total"><p>Total de Votos: {{totalVotes}}</p></div>
