Minor style stuff

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -84,10 +84,13 @@
 
 #select-party .selectize-input
 	input
-		background-color: #ffffff !important
+		background-color: white !important
 
 #select-party .selectize-input input
 	border: 1px solid $lightgray !important
 	border-radius: 0 !important
 	margin-bottom: 1px !important
 	z-index: 1000 !important
+
+#select-party .selectize-input input input::-webkit-input-placeholder
+	color: $black !important
