--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -8,27 +8,6 @@
                 <form {{action (if voter.id 'update' 'create') voter on="submit" }} accept-charset="UTF-8" role="form" class="form-signin">
                     <fieldset id="voter-edit">
                         <div class="form-group row">
-                            <div class="form-group row">
-                                <div class="col-md-8 col-md-offset-2">
-                                    <h4 style="margin-top:0">Información Electoral</h4>
-                                </div>
-                                <div class="col-md-8 col-md-offset-2">
-                                    <label>Número de Credencial de Elector</label>
-                                    {{input value=voter.electoral_id_number required=true class="form-control voter-edit-field"}}
-                                </div>
-                                <div class="col-md-4 col-md-offset-2">
-                                    <label>Vigencia</label>
-                                    {{#x-select value=voter.expiration_date required=true class="form-control voter-edit-select" 
-                                    on-change=(action "updateExpirationDate" voter) as |expir|}} 
-                                        {{#expir.option value='' disabled=true selected=true hidden=true}}{{/expir.option}}
-                                        {{#each years as |year|}}
-                                            {{#expir.option value=year}}{{year}}{{/expir.option}} 
-                                        {{/each}} 
-                                    {{/x-select}}
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
                             <div class="form-group row" style="margin-bottom:0">
                                 <div class="col-md-8 col-md-offset-2">
                                     <h4>Información Personal</h4>
@@ -38,7 +17,7 @@
                                     {{input value=voter.first_name required=true pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Segundo Nombre - <i class="text-muted">Opcional</i></label>
+                                    <label>Segundo Nombre <i class="text-muted">(Opcional)</i></label>
                                     {{input value=voter.second_name pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
@@ -96,7 +75,7 @@
                                     {{input value=voter.outside_number required=true class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Núm. Interior - <i class="text-muted">Opcional</i></label>
+                                    <label>Núm. Interior <i class="text-muted">(Opcional)</i></label>
                                     {{input value=voter.inside_number class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
@@ -113,7 +92,7 @@
                                     {{input value=voter.municipality required=true pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2" style="margin-bottom:0">
-                                    <label>Localidad - <i class="text-muted">Opcional</i></label>
+                                    <label>Localidad <i class="text-muted">(Opcional)</i></label>
                                     {{input value=voter.locality pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
                                 </div>
                             </div>
@@ -121,7 +100,7 @@
                         <div class="form-group row">
                             <div class="form-group row">
                                 <div class="col-md-8 col-md-offset-2">
-                                    <h4 style="margin-top:-7px">Información en Credencial</h4>
+                                    <h4 style="margin-top:-7px">Credencial de Elector</h4>
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Clave de Elector</label>
@@ -147,6 +126,21 @@
                                     <label>Clave de Localidad</label>
                                     {{input value=voter.locality_code type="number" min=0 oninput="validity.valid||(value='');"class="form-control voter-edit-field"}}
                                 </div>
+                                <div class="col-md-4 col-md-offset-2">
+                                    <label>Vigencia</label>
+                                    {{#x-select value=voter.expiration_date required=true class="form-control voter-edit-select" 
+                                    on-change=(action "updateExpirationDate" voter) as |expir|}} 
+                                        {{#expir.option value='' disabled=true selected=true hidden=true}}{{/expir.option}}
+                                        {{#each years as |year|}}
+                                            {{#expir.option value=year}}{{year}}{{/expir.option}} 
+                                        {{/each}} 
+                                    {{/x-select}}
+                                </div>
+                                <div class="col-md-8 col-md-offset-2">
+                                    <label>Número de Credencial de Elector</label>
+                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Localizado al reverso de la Credencial de Elector</p>
+                                    {{input value=voter.electoral_id_number required=true class="form-control voter-edit-field"}}
+                                </div>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -167,11 +161,11 @@
                                     {{input type="email" value=voter.email required=true class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Correo Electrónico Alternativo - <i class="text-muted">Opcional</i></label>
+                                    <label>Correo Electrónico Alternativo <i class="text-muted">(Opcional)</i></label>
                                     {{input type="email" value=voter.alternative_email class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>URL Facebook - <i class="text-muted">Opcional</i></label>
+                                    <label>URL Facebook <i class="text-muted">(Opcional)</i></label>
                                     {{input value=voter.facebook_account class="form-control voter-edit-field"}}
                                 </div>
                             </div>
@@ -182,27 +176,27 @@
                                     <h4 style="margin-top:-7px">Información de Estructura</h4>
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Organización - <i class="text-muted">Opcional</i></label>
+                                    <label>Organización <i class="text-muted">(Opcional)</i></label>
                                     {{input value=voter.organization class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Cargos Partidarios - <i class="text-muted">Opcional</i></label>
+                                    <label>Cargos Partidarios <i class="text-muted">(Opcional)</i></label>
                                     {{input value=voter.party_positions_held class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Pertenece a Estructura - <i class="text-muted">Opcional</i></label>
+                                    <label>Pertenece a Estructura <i class="text-muted">(Opcional)</i></label>
                                     {{input type="checkbox" checked=voter.is_part_of_party class="form-control"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Ha sido Candidato(a) - <i class="text-muted">Opcional</i></label>
+                                    <label>Ha sido Candidato(a) <i class="text-muted">(Opcional)</i></label>
                                     {{input type="checkbox" checked=voter.has_been_candidate class="form-control"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Año de Candidatura - <i class="text-muted">Opcional</i></label>
+                                    <label>Año de Candidatura <i class="text-muted">(Opcional)</i></label>
                                     {{input value=voter.election_year type="number" min=1900 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Grado de Estudios - <i class="text-muted">Opcional</i></label>
+                                    <label>Grado de Estudios <i class="text-muted">(Opcional)</i></label>
                                     {{#x-select value=voter.highest_educational_level class="form-control voter-edit-select" on-change=(action "updateEducation" voter) as |hel|}}
                                         {{#hel.option value='' disabled=true selected=true hidden=true}}Grado de Estudios{{/hel.option}}
                                         {{#hel.option value='PRIMARIA'}}PRIMARIA{{/hel.option}} 
@@ -213,7 +207,7 @@
                                     {{/x-select}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Ocupación - <i class="text-muted">Opcional</i></label>
+                                    <label>Ocupación <i class="text-muted">(Opcional)</i></label>
                                     {{#x-select value=voter.current_ocupation class="form-control voter-edit-select" on-change=(action "updateOcupation" voter) as |ocp|}} 
                                         {{#ocp.option value='' disabled=true selected=true hidden=true}}Ocupación{{/ocp.option}}
                                         {{#ocp.option value='SECTOR PUBLICO'}}SECTOR PUBLICO{{/ocp.option}} 
@@ -238,6 +232,7 @@
                                     <h4 style="margin-top:-7px">Notas</h4>
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
+                                    <label><i class="text-muted">(Opcional)</i></label>
                                     {{textarea value=voter.notes rows=5 class="form-control voter-edit-field"}}
                                 </div>
                             </div>
