--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -60,23 +60,7 @@
                         <div class="form-group row">
                             <div class="form-group row">
                                 <div class="col-md-8 col-md-offset-2">
-                                    <h4>Dirección</h4>
-                                </div>
-                                <div class="col-md-8 col-md-offset-2">
-                                    <label>Colonia</label>
-                                    {{input value=voter.suburb required=true pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
-                                </div>
-                                <div class="col-md-8 col-md-offset-2">
-                                    <label>Código Postal</label>
-                                    {{input value=voter.postal_code type="number" required=true  min=0 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
-                                </div>
-                                <div class="col-md-8 col-md-offset-2">
-                                    <label>Núm. Exterior</label>
-                                    {{input value=voter.outside_number required=true class="form-control voter-edit-field"}}
-                                </div>
-                                <div class="col-md-8 col-md-offset-2">
-                                    <label>Núm. Interior <i class="text-muted">(Opcional)</i></label>
-                                    {{input value=voter.inside_number class="form-control voter-edit-field"}}
+                                    <h4>Ubicación</h4>
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Estado</label>
@@ -100,23 +84,49 @@
                         <div class="form-group row">
                             <div class="form-group row">
                                 <div class="col-md-8 col-md-offset-2">
+                                    <h4>Dirección</h4>
+                                </div>
+                                <div class="col-md-8 col-md-offset-2">
+                                    <label>Colonia <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.suburb pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
+                                </div>
+                                <div class="col-md-8 col-md-offset-2">
+                                    <label>Código Postal <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.postal_code type="number" min=0 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
+                                </div>
+                                <div class="col-md-4 col-md-offset-2">
+                                    <label>Núm. Exterior <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.outside_number class="form-control voter-edit-field"}}
+                                </div>
+                                <div class="col-md-4 col-md-offset-0">
+                                    <label>Núm. Interior <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.inside_number class="form-control voter-edit-field"}}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="form-group row">
+                                <div class="col-md-8 col-md-offset-2">
                                     <h4 style="margin-top:-7px">Contacto</h4>
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Teléfono Fijo</label>
-                                    {{input value=voter.home_phone type="number" min=0 required=true oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
+                                    <label>Teléfono Fijo<i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.home_phone type="number" min=0 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Teléfono Celular</label>
-                                    {{input value=voter.mobile_phone type="number" min=0 required=true oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
+                                    <label>Teléfono Celular <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.mobile_phone type="number" min=0 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Correo Electrónico</label>
-                                    {{input type="email" value=voter.email required=true class="form-control voter-edit-field"}}
+                                    <label>Correo Electrónico <i class="text-muted">(Opcional)</i></label>
+                                    {{input type="email" value=voter.email class="form-control voter-edit-field"}}
                                 </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="form-group row">
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Correo Electrónico Alternativo <i class="text-muted">(Opcional)</i></label>
-                                    {{input type="email" value=voter.alternative_email class="form-control voter-edit-field"}}
+                                    <h4 style="margin-top:-7px">Redes Sociales</h4>
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>URL Facebook <i class="text-muted">(Opcional)</i></label>
@@ -130,32 +140,36 @@
                                     <h4 style="margin-top:-7px">Credencial de Elector</h4>
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Clave de Elector</label>
-                                    {{input value=voter.electoral_code required=true class="form-control voter-edit-field"}}
+                                    <label>Clave de Elector <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.electoral_code class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>CURP</label>
-                                    {{input value=voter.CURP required=true class="form-control voter-edit-field"}}
+                                    <label>CURP <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.CURP class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Clave de Estado</label>
-                                    {{input value=voter.state_code type="number" min=0 required=true oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
+                                    <label>Clave de Estado <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.state_code type="number" min=0 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Clave de Municipio</label>
-                                    {{input value=voter.municipality_code type="number" min=0 required=true oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
+                                    <label>Clave de Municipio <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.municipality_code type="number" min=0 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Clave de Sección</label>
-                                    {{input value=voter.section type="number" min=0 required=true oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
+                                    <label>Clave de Sección <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.section type="number" min=0 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Clave de Localidad</label>
+                                    <label>Clave de Localidad <i class="text-muted">(Opcional)</i></label>
                                     {{input value=voter.locality_code type="number" min=0 oninput="validity.valid||(value='');"class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-4 col-md-offset-2">
-                                    <label>Vigencia</label>
-                                    {{#x-select value=voter.expiration_date required=true class="form-control voter-edit-select" 
+                                    <label>Emisión <i class="text-muted">(Opcional)</i></label>
+                                    {{input value=voter.emision_date type="number" min=1917 max=2017 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
+                                </div>
+                                <div class="col-md-4 col-md-offset-0">
+                                    <label>Vigencia <i class="text-muted">(Opcional)</i></label>
+                                    {{#x-select value=voter.expiration_date class="form-control voter-edit-select" 
                                     on-change=(action "updateExpirationDate" voter) as |expir|}} 
                                         {{#expir.option value='' disabled=true selected=true hidden=true}}{{/expir.option}}
                                         {{#each years as |year|}}
@@ -164,9 +178,9 @@
                                     {{/x-select}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
-                                    <label>Número de Credencial de Elector</label>
+                                    <label>Número de Credencial de Elector <i class="text-muted">(Opcional)</i></label>
                                     <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Localizado al reverso de la Credencial de Elector</p>
-                                    {{input value=voter.electoral_id_number required=true class="form-control voter-edit-field"}}
+                                    {{input value=voter.electoral_id_number class="form-control voter-edit-field"}}
                                 </div>
                             </div>
                         </div>
