--- a/frontend/app/templates/components/voter-edit-form-quick.hbs
+++ b/frontend/app/templates/components/voter-edit-form-quick.hbs
@@ -35,15 +35,15 @@
                                     <label>Fecha de Nacimiento <i class="text-muted">(Opcional)</i></label>
                                 </div>
                                 <div class="col-md-2 col-md-offset-2">
-                                    {{input value=dayOfBirth type="number" min=0 max=31 oninput="validity.valid||(value='');" required=true class="form-control voter-edit-field"}}
+                                    {{input value=dayOfBirth type="number" min=0 max=31 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                     <p class="form-text text-muted" style="margin-top:-7px;margin-bottom:4px">Día</p>
                                 </div>
                                 <div class="col-md-2 col-md-offset-0">
-                                    {{input value=monthOfBirth type="number" min=0 max=12 oninput="validity.valid||(value='');" required=true class="form-control voter-edit-field"}}
+                                    {{input value=monthOfBirth type="number" min=0 max=12 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                     <p class="form-text text-muted" style="margin-top:-7px;margin-bottom:4px">Mes</p>
                                 </div>
                                 <div class="col-md-4 col-md-offset-0">
-                                    {{input value=yearOfBirth type="number" min=1900 oninput="validity.valid||(value='');" required=true class="form-control voter-edit-field"}}
+                                    {{input value=yearOfBirth type="number" min=1900 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                     <p class="form-text text-muted" style="margin-top:-7px;margin-bottom:4px">Año</p>
                                 </div>
                             </div>
@@ -71,7 +71,7 @@
                             <div class="form-group row">
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Municipio <i class="text-muted">(Opcional)</i></label>
-                                    {{input value=voter.municipality required=true pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
+                                    {{input value=voter.municipality pattern="[a-zA-z'\- ]+" class="form-control voter-edit-field"}}
                                 </div>
                             </div>
                         </div>
